Crash with resample curve node #88603

Closed
opened 2021-05-26 18:53:00 +02:00 by Dalai Felinto · 4 comments

Blender Version
Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-05-26 10:25, hash: afec66c024
Worked: -

Short description of error
Assert with the resample curve node.

Exact steps for others to reproduce the error
Spline Interpolation Test.blend

  • Unmute "Resample Curve"
  • Click on "Attribute Fill" to inspect it in the spreadsheet editor.

BLI_assert failed: source/blender/functions/FN_generic_span.hh:113, GMutableSpan(), at 'buffer != nullptr || size == 0'

**Blender Version** Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-05-26 10:25, hash: `afec66c024` Worked: - **Short description of error** Assert with the resample curve node. **Exact steps for others to reproduce the error** [Spline Interpolation Test.blend](https://archive.blender.org/developer/F10139829/Spline_Interpolation_Test.blend) * Unmute "Resample Curve" * Click on "Attribute Fill" to inspect it in the spreadsheet editor. --- `BLI_assert failed`: source/blender/functions/FN_generic_span.hh:113, GMutableSpan(), at 'buffer != nullptr || size == 0'
Author
Owner

Added subscriber: @dfelinto

Added subscriber: @dfelinto
Author
Owner

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Hans Goudey was assigned by Dalai Felinto 2021-05-26 18:53:33 +02:00

This issue was referenced by e5b51cb511

This issue was referenced by e5b51cb511e8ea408ec14017f9b13821d4299726
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#88603
No description provided.