Fix T88603: Crash with spline attributes after curve resample

The output curve's spline attribute domain custom data needs to be
reallocated with the correct length after adding the splines.